client/public/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}
h1 {
  margin: 50px;
  font-size: 4rem;
  justify-content: center;
  text-align: center;
  color: white;
  font-weight: 600;
}

.intro {
  font-size: 1.2rem;
  margin: 35px;
  color: #fbae3ccc;
}

h2 {
  font-size: 2rem;
  text-align: center;
  font-weight: 500;
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-weight: 600;
  color: white;
}

p {
  text-align: center;
  font-size: 1rem;
  color: white;
}

a {
  color: white;
  text-decoration: none;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 40px;
}

body {
  background-image: url("blob-scene-haikei.svg");
  height: 100vh;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}

.flex-container {
  text-align: center;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  width: 100vw;
  /* height: 100%; */
  justify-content: center;
  align-content: center;
  align-items: center;
}

.border-container-message {
  background-color: rgba(0, 0, 0, 0.4);
  opacity: 0.9;
  width: 80%;
  margin: auto;
  padding: 1rem;
  color: var(--off-white);
  border-radius: 1.5rem;

  backdrop-filter: blur(8px);
  -webkit-backdrop-filter: blur(8px);
}

.button-group {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
}

.btn {
  font-size: 1rem;
  text-align: center;
  border-radius: 8px;
  font-weight: 400;
  padding: 0.5rem;
  color: black;
  margin: 0.5rem;
  cursor: pointer;
}
.modal-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.9);
  opacity: 0;
  pointer-events: none;
  transition: opacity 0.5s ease;
  height: 100vh;
  width: 100vw;
}

.modal-info {
  width: 600px;
  max-width: 600px;
  border: var(--grey) 5px solid;
  border-radius: 5px;
  padding: 30px 50px;
  text-align: center;
  box-shadow: 0 2px 4px (rgba(0, 0, 0, 0.2));
}

.modal-container.show {
  opacity: 1;
  pointer-events: auto;
}

h3 {
  color: white;
  font-size: 40px;
}

/* Quiz Styling */

button {
  max-width: 256px;
  min-width: 128px;
  width: 100%;
  margin: 8px;
  border-radius: 8px;
  font-size: 1.4rem;
}

button:hover {
  cursor: pointer;
}

.name-label {
  color: white;
  font-size: 2.5rem;
}

#fullname {
  width: 100%;
}

#startButton {
  width: 35%;
}

.hidden {
  display: none;
}

#resetButton {
  text-decoration: none;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 40px;
}

/* Results page */

h4 {
  color: white;
  font-size: 30px;
}

